# length-max-tokenizer

./: .gitignore  Cargo.toml  OPERATIONS.md  README.md  benchmark_generation_chars_per_sec.py  compare_trainers_tpc.py  corpus_small.txt  corpus_smoke.txt  count_full_corpus_token_totals.py  download_fineweb_edu_sample_10bt.sh  dump_initial_chars.py  eval_downstream_threeway.py  eval_extra_metrics_lenmax_vs_superbpe.py  fineweb_edu_10bt_train_and_tokenize.sh  inspect_corpus.py  list_vocab.py  pareto_efficiency_quality.py  parse_token_table.py  plot_downstream_threeway.py  plot_lenmax_favorable_metrics.py  plot_threeway_metrics_wt103_valid.py  pyproject.toml  run_full_wt103_tokenbudget_equal_pack4000_v020.sh  train_vocab_and_tokenize.py  validate_modern_arch_llama.py  verify_py_vs_rust.py
.github/workflows/: publish_pypi.yml
hf_tokenizer/: tokenization_length_tokenizer.py
hf_tokenizer_out/: .gitignore  README.md  test_consistency.py  tokenization_length_tokenizer.py  train_from_corpus.py  vocab.json
hf_tokenizer_out/rust_trainer/: Cargo.toml
hf_tokenizer_out/rust_trainer/src/: lib.rs  main.rs
src/: lib.rs  main.rs  pyo3_ext.rs
